fixed weird white overflow whitespace when resizing window

--- a/style.css
+++ b/style.css
@@ -133,7 +133,7 @@ div.middle {
     width: 100%;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(33.3%, auto));
-    /* overflow: hidden; */
+    overflow: hidden;
 }
 
 .grid-item {
